# rca-backend

./: .gitignore  BULK_UPLOAD_GUIDE.md  create_admin.py  main.py  manage.py  pyproject.toml  sample_alumni_upload.csv
alembic/: env.py
alembic/versions/: 272e6681fdab_initial_setup.py  4321b9efca95_added_created_at_and_updated_at_in_.py  b79a3a4ac7ac_added_is_pinned_in_notices.py  ce03488168d7_added_user_profile_committee_and_.py
src/: main.py
src/api/: deps.py
src/api/v1/: api.py  auth.py  committee.py  content.py  users.py
src/core/: config.py  security.py
src/db/: __init__.py  base.py  database.py
src/models/: committee.py  content.py  enums.py  user.py
src/schemas/: auth.py  committee.py  content.py  user.py
